self-hosted-services/frigate/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate-route
  namespace: frigate
spec:
  parentRefs:
    - name: crobceratops-gateway
      namespace: gateways
    - name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - frigate.crobceratops.ryanbeales.com
    - frigate.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: frigate
          port: 5000
